welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: not found: value aSMile
  (aSMile & bSmile) |  (!aSMile & !bSmile) } 
   ^monkeyTrouble:2: error: not found: value aSMile
  (aSMile & bSmile) |  (!aSMile & !bSmile) } 
                         ^